--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,39 +38,26 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+  - images/ic_action_search.png
+  - images/ic_tab_strip_icon_category.png
+  - images/ic_tab_strip_icon_category_selected.png
+  - images/ic_tab_strip_icon_feed.png
+  - images/ic_tab_strip_icon_feed_selected.png
+  - images/ic_tab_strip_icon_follow.png
+  - images/ic_tab_strip_icon_follow_selected.png
+  - images/ic_tab_strip_icon_profile.png
+  - images/ic_tab_strip_icon_profile_selected.png
+  - images/ic_home_public.png
+  - images/ic_menu_heart.png
+  - images/ic_menu_more.png
+  - images/ic_menu_download.png
+  - images/ic_default_avatar.png
+  - images/ic_bg_login.png
+  - images/ic_account_login_header.png
+  - images/ic_account_login_wechat.png
+  - images/ic_account_login_qq.png
+  - images/ic_account_login_weibo.png
+  - images/no_account_tip.png
+  - images/ic_action_focus.png
